--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -12,9 +12,11 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Ysabeau SC', sans-serif !important;
   height: 100%;
   margin: 0;
+  padding-top: 80px;
+  background-color: #262a33 !important;
 }
 
 main {
