--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,5 +1,5 @@
 html {
-  height: 100%;
+  height: 100% !important;
   scroll-behavior: smooth;
 }
 
@@ -10,22 +10,22 @@ html {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+  display: flex !important;
+  flex-direction: column !important;
   font-family: 'Ysabeau SC', sans-serif !important;
-  height: 100%;
+  height: 100% !important;
   margin: 0;
   padding-top: 80px;
   background-color: #262a33 !important;
 }
 
 main {
-  flex-grow: 1;
+  flex-grow: 1 !important;
 }
 
 img {
-  vertical-align: middle;
-  object-fit: cover;
+  vertical-align: middle !important;
+  object-fit: cover !important;
 }
 
 ul,
@@ -36,7 +36,7 @@ ol {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 p {
