--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -8,8 +8,8 @@
   right: 0;
   z-index: -1;
   width: 1020px;
-  height: 88%;
-  box-shadow: 150px -3px 51px -9px #262A33 inset;
+  height: 600px;
+  box-shadow: 90px -20px 51px 50px #262a33 inset;
   background-image: url('../../assets/images/hero-bgi.jpg');
   background-repeat: no-repeat;
   background-position: top center;
@@ -69,14 +69,14 @@
   background: linear-gradient(
     45deg,
     #911111,
-    #ff7300,
+    #ff0000,
     #ff0000,
     #ff7300,
     #ff0000,
     #002bff,
     #911111,
     #f61919,
-    #ff0000
+    #060d6c
   );
   position: absolute;
   top: -2px;
@@ -127,5 +127,12 @@
   }
   100% {
     background-position: 0 0;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .hero__img {
+    right: calc(50% - 768px);
+    box-shadow: 90px -20px 51px 50px #262a33 inset, -30px -20px 51px 50px #262a33 inset;
   }
 }
