--- a/src/components/CarCard/CarCard.scss
+++ b/src/components/CarCard/CarCard.scss
@@ -1,7 +1,7 @@
 .car-card {
   background-color: #111;
   color: #fff;
-  padding: 20px;
+  padding-right: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
@@ -13,10 +13,9 @@
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgba(17, 25, 40, 0.25);
   border-radius: 12px;
-  border: 1px solid rgba(255, 255, 255, 0.125);  
-  padding: 38px;  
-  filter: drop-shadow(0 30px 10px rgba(0,0,0,0.125));
-  
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  filter: drop-shadow(0 30px 10px rgba(0, 0, 0, 0.125));
+
   &:hover {
     background-color: #222;
     transform: scale(1.05);
@@ -24,7 +23,7 @@
 
   img {
     width: 150px;
-    height: 200px;
+    height: 100%;
     border-radius: 5px;
     margin-right: 20px;
     transition: opacity 0.3s;
