--- a/src/components/MainVacancys/MainVacancys.scss
+++ b/src/components/MainVacancys/MainVacancys.scss
@@ -9,7 +9,12 @@
   background-attachment: fixed;
   background-image: url('../../assets/images/MainVacancybackground.png');
   background-position: center;
+  background-clip: border-box;
   background-repeat: no-repeat;
   width: 100%;
+  height: 100%;
+}
+
+body {
   height: 100%;
 }
